test/functions/vass/best-shadowed2.with-checks.good
best-shadowed2.chpl:8: In function 'main':
best-shadowed2.chpl:9: error: the target of this call is potentially hijacked
best-shadowed2.chpl:24: note: the best-matching candidate is here
best-shadowed2.chpl:23: note: ... defined in this module
best-shadowed2.chpl:14: note: even though the candidate here is also available
best-shadowed2.chpl:12: note: ... defined in this module
